# mindlogger-graphomotor-data

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yaml
config/: graphomotor.toml
mindlogger_graphomotor/: __main__.py  graphomotor.py  version_processors.py
src/genbids/: __init__.py  bids_conversion.py  bids_model.py  bids_writer.py
src/mindlogger_graphomotor/: __init__.py  __main__.py  graphomotor.py  report_preprocessors.py  version_processors.py
src/oak_mindlogger/: __init__.py  cli.py  dev-playground.ipynb  oak_report.py
tests/: test_placeholder.py
